# model_safety_eval

./: .gitignore  README.md  __main__.py  config.json  main.py  pyproject.toml  requirements.txt
agents/: judge_agent.py  payload_generation_agent.py  tool_discovery_agent.py  verifier_agent.py  vuln_exploit_agent.py
attacks/: base.py
attacks/prompt_injection/: __init__.py  ai_rewrite.py  ascii_smuggling.py  char_mapping.py  emoji.py  garbled.py  input_perturbation.py  many_shot.py  multilingual.py  multiturn_followup.py  resource_consumption.py  splitter_decoder.py  test_attack_generators.py  text_transform.py  tool_abuse_chained.py  tool_discovery.py
attacks/tool_security/: __init__.py  test_tool_security_enhancements.py  tool_active_probing.py  tool_capability_exploit.py  tool_vuln_exploit.py
config/: schema.json  settings.py
core/: executor.py  request_template.py  sse_collector.py  tool_trace.py
evaluation/: baseline.py  judge_prompt.py  report.py  scorer.py  tool_risk.py
graph/: state.py  workflow.py
plugins/: __init__.py  base.py  detectors.py  mutators.py  orchestrators.py  test_plugins.py
templates/: judge_prompt.md  report_template.md
utils/: curl_parser.py  jsonpath_utils.py
