[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-safety-eval"
version = "0.1.0"
description = "AI Model Security Penetration Testing Framework"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "httpx>=0.27",
    "sseclient-py>=1.8",
    "jsonpath-ng>=1.6",
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
model-safety-eval = "model_safety_eval.main:app"

[tool.setuptools.packages.find]
where = [".."]
include = ["model_safety_eval*"]
